[project]
name = "ibkr-toolkit"
version = "0.1.0"
description = "Interactive Brokers API 工具包 - 提供账户查询、持仓管理、数据导出等只读功能"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ib-async>=2.0.1",
    "python-dotenv>=1.0.0",
    "notion-client>=2.0.0",
    "pathspec>=0.12.1",
    "pandas>=2.3.3",
    "yfinance>=0.2.66",
]

[project.optional-dependencies]
excel = ["pandas>=2.0.0", "openpyxl>=3.1.0"]
dev = ["pathspec>=0.11.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_toolkit"]
